--- a/route-front/src/app/app.component.css
+++ b/route-front/src/app/app.component.css
@@ -3,14 +3,24 @@ p {
 }
 
 agm-map {
-    height: 400px;
+    height: 100%;
 }
 
-
 * {
-    font-family: Lato;
+    font-family: Verdana;
+    font-size: 12px;
 }
 
 a {
     color: darkblue;
+}
+
+.search {
+    position: absolute;
+    top: 10px;
+    left: 30%;
+    padding: 1%;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
