--- a/route-front/src/app/app.component.html
+++ b/route-front/src/app/app.component.html
@@ -1,24 +1,4 @@
-<!-- 
-<div style="text-align: center">
-  <h1>
-    Bem Vindo {{ title }}!
-  </h1>
-
-  <button (click)="get()">Buscar</button>
-
-  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" >
-
-    <ng-container *ngFor="let marker of markers">
-      <agm-marker [latitude]="marker?.xPoint" [longitude]="marker?.yPoint" (mouseOver)="onMouseOver(infoWindow, $event)"
-      (mouseOut)="onMouseOut(infoWindow, $event)">
-        <agm-info-window [disableAutoPan]="false" #infoWindow>
-        <map-info [marker]="marker"></map-info> 
-        </agm-info-window>
-      </agm-marker>
-    </ng-container>
-  
-  </agm-map>
-</div> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <agm-map [latitude]="lat" [longitude]="lng">
   <agm-direction *ngIf="dir" [origin]="dir.origin" [destination]="dir.destination" (onResponse)="onResponse($event)">
@@ -31,5 +11,15 @@
     </ng-container>
   </agm-direction>
 </agm-map>
- 
-<button type="button" (click)="getDirection()">Get</button>
+
+<div class="search">
+  <div class="form-inline">
+    <div class="form-group mb-2">
+      <input #origem type="text" class="form-control" id="origem" placeholder="Origem">
+    </div>
+    <div class="form-group mx-sm-3 mb-2">
+      <input #destino type="text" class="form-control" id="destino" placeholder="Destino">
+    </div>
+    <button type="button" (click)="getDirection()" class="btn btn-primary mb-2">Buscar</button>
+  </div>
+</div>
